--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password=Learn2code!
 # Specify the DBMS
 spring.jpa.database=MYSQL
 # Show or not log for each sql query
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto=update
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
